# nanosaur

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  Dockerfile.galactic  Dockerfile.simple  LICENSE  README.md  docker-compose.yml  jetson_cuda.sh  jetson_utils.sh  robot.rosinstall  simulation.rosinstall
.github/: FUNDING.yml  dependabot.yml
.github/workflow/: docker-image.yml
.github/workflows/: auto-merge-dependabot.yml  dependabot-approve-and-auto-merge.yml  dependabot.yml  docker-image.yml  release.yml
nanosaur/: CMakeLists.txt  package.xml
nanosaur/CI/: check_if_release.py  check_is_draft.py  scripts_test.sh  version_build.py
nanosaur/compose/: docker-compose.simulation.yml
nanosaur/docker/: Dockerfile.nanosaur  diagnostic_entrypoint.sh  docker_build_isaac_ros.sh  entrypoint.sh
nanosaur/rosinstall/: desktop.rosinstall  docker.rosinstall  foxy_docker.rosinstall  foxy_robot.rosinstall  galactic_docker.rosinstall  perception.rosinstall  robot.rosinstall  simulation.rosinstall  simulations.rosinstall
nanosaur/scripts/: completition.bash  daemon.json  install.sh  jetson_cuda.sh  nanosaur
nanosaur_bringup/: CMakeLists.txt  package.xml
nanosaur_bringup/launch/: bringup.launch.py
nanosaur_bringup/param/: nanosaur.yml
nanosaur_bringup/scripts/: install.sh
nanosaur_camera/: CMakeLists.txt  package.xml
nanosaur_camera/include/nanosaur_camera/: image_converter.h
nanosaur_camera/launch/: camera.launch.py
nanosaur_camera/param/: camera.yml
nanosaur_camera/src/: camera_publisher.cpp  image_converter.cpp
nanosaur_control/: CMakeLists.txt  package.xml
nanosaur_control/config/: joystick.yaml  ps3.nanosaur.yml  twist_mux_locks.yaml  twist_mux_topics.yaml
nanosaur_control/launch/: teleop.launch.py  twist_control.launch.py
nanosaur_control/param/: ps3.nanosaur.yml
nanosaur_description/: CMakeLists.txt  package.xml
nanosaur_description/launch/: description.launch.py  display.launch.py
nanosaur_description/meshes/: README.md  base_front.stl  base_rear.stl  cover-fe.stl  cover-rs.stl  cover-zedmini.stl  cover.stl  flap_bottom.stl  flap_top.stl  nanosaur_base.stl  nanosaur_cover_batteries.stl  nanosaur_cover_electronics.stl  nanosaur_flap.stl  nanosaur_flap_LD06.stl  nanosaur_head.stl  nanosaur_head_realsense_d435.stl  pb_holder.stl  slider.stl  sprocket.stl  track.stl  track_print.stl  wheel.stl
nanosaur_description/meshes/025in/: slider.stl  sprocket.stl  wheel.stl
nanosaur_description/meshes/parts/: LD06.stl  OLED_Module.stl  Pololu-Micro-Metal-Gearmotor.stl  board_expansion.stl  d435.dae  fisheye_camera.dae  mecanum_cover.stl  mecanum_mini_wheel.stl  mecanum_wheels.stl  motor2040.stl  motor_block.stl  motor_board.stl  nanosaur-exp-board.stl  nanosaur_PCB_electronics.stl  nanosaur_PCB_oleds.stl  power_bank.stl  rasp_camera.stl
nanosaur_description/rviz/: nanosaur.rviz  urdf.rviz
nanosaur_description/scripts/: nanosaur_stl.sh
nanosaur_description/urdf/: base.urdf.xacro  flap.urdf.xacro  head.urdf.xacro  materials.gazebo.xacro  materials.urdf  mecanum.urdf.xacro  nanosaur.urdf  nanosaur.urdf.xacro  nanosaur.urdf.xml  omniwheel.urdf.xacro  properties.urdf.xacro  robot.urdf.xacro  track.urdf.xacro  utilities.urdf.xacro
nanosaur_description/urdf/flap/: flap.urdf.xacro  flap_LD06.urdf.xacro
nanosaur_description/urdf/head/: d435.urdf.xacro  head.urdf.xacro  head_fisheye.urdf.xacro  head_pi.urdf.xacro  head_realsense.urdf.xacro  head_zedmini.urdf.xacro  zedmini.urdf.xacro
nanosaur_drive/: CMakeLists.txt  package.xml
nanosaur_msgs/: CMakeLists.txt  package.xml
nanosaur_msgs/msg/: Eyes.msg
nanosaur_msgs/srv/: EyeMessage.srv
nanosaur_robot/: package.xml  requirements.txt  setup.cfg  setup.py
nanosaur_robot/launch/: bringup.launch.py
nanosaur_robot/nanosaur_robot/: display.py  motor.py  motors.py  nanosaur.py
nanosaur_teleop/: CMakeLists.txt  package.xml
nanosaur_teleop/launch/: nanosaur_teleop.launch.py  nanosaur_teleop.py  teleop_twist_joy.py
nanosaur_teleop/param/: nanosaur.yml
nanosaur_visualization/: CMakeLists.txt  package.xml
nanosaur_visualization/launch/: robot_display.launch.py
nanosaur_visualization/rviz/: robot.rviz
